Examples require no horizontal scrolling. Fixes #66.

--- a/example/example.css
+++ b/example/example.css
@@ -56,6 +56,7 @@ li {
     padding: 2px 0;
     height: 24px;
 	font-size: 14px;
+    cursor: pointer;
 }
 li:hover {
     background-color: #eeeeee;
